Добавляет локализацию для графика

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,3 +1,9 @@
 window.title=JavaFx Application
 
 button.change.lang=Сменить язык
+
+linechart.title=The model of the dependence of wages and employment
+linechart.xaxis=Time, t
+linechart.yaxis=Employment, N   and   wages, P
+linechart.pdata=The size of the salary
+linechart.ndata=Number of employees
