--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -1,3 +1,9 @@
-window.title=JavaFX Приложение
+window.title=JavaFx Приложение
 
 button.change.lang=Change language
+
+linechart.title=Модель зависимости зарплат и занятости
+linechart.xaxis=Время, t
+linechart.yaxis=Занятость, N   и   зарплата, P
+linechart.pdata=Размер зарплаты
+linechart.ndata=Количество занятых
