Локализирует поле событий

--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -7,3 +7,6 @@ linechart.xaxis=Время, t
 linechart.yaxis=Занятость, N   и   зарплата, P
 linechart.pdata=Размер зарплаты
 linechart.ndata=Количество занятых
+
+events.header=События
+events.text=Модель аналогична модели колебаний. Выведенная из равновесного состояния система стремится к равновесию со скоростями а1 и а2. Равновесное состояние - значение зарплаты и занятости, которые устраивают рабочих и работодателя
