--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -7,3 +7,6 @@ linechart.xaxis=Time, t
 linechart.yaxis=Employment, N   and   wages, P
 linechart.pdata=The size of the salary
 linechart.ndata=Number of employees
+
+events.header=Events
+events.text=The model is similar to the model of oscillations. The system derived from the equilibrium state tends to equilibrium with velocities a1 and a2. Equilibrium state - the value of wages and employment, which suit the workers and the employer
