--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -1,5 +1,7 @@
 window.title=JavaFx Приложение
 
+button.example1=Равновесие
+button.example2=Зарплата слишком высокая
 button.change.lang=Change language
 
 linechart.title=Модель зависимости зарплат и занятости
