--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,5 +1,7 @@
 window.title=JavaFx Application
 
+button.example1=Balance
+button.example2=Too high salary
 button.change.lang=Сменить язык
 
 linechart.title=The model of the dependence of wages and employment
@@ -9,4 +11,4 @@ linechart.pdata=The size of the salary
 linechart.ndata=Number of employees
 
 events.header=Events
-events.text=The model is similar to the model of oscillations. The system derived from the equilibrium state tends to equilibrium with velocities a1 and a2. Equilibrium state - the value of wages and employment, which suit the workers and the employer
+events.text=The model is similar to the model of oscillations. The system derived from the balance state tends to balance with velocities a1 and a2. Equilibrium state - the value of wages and employment, which suit the workers and the employer
