--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,5 +1,6 @@
 window.title=JavaFx Application
 
+parameters.header=Model's parameters
 button.example1=Balance
 button.example2=Too high salary
 button.change.lang=Сменить язык
