--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -1,5 +1,6 @@
 window.title=JavaFx Приложение
 
+parameters.header=Параметры модели
 button.example1=Равновесие
 button.example2=Зарплата слишком высокая
 button.change.lang=Change language
