--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -12,4 +12,14 @@ linechart.pdata=The size of the salary
 linechart.ndata=Number of employees
 
 events.header=Events
-events.text=The model is similar to the model of oscillations. The system derived from the balance state tends to balance with velocities a1 and a2. Equilibrium state - the value of wages and employment, which suit the workers and the employer
+events.text=The model is similar to the model of oscillations. The system derived from the balance state tends to balance \
+with velocities a1 and a2. Balance state - the value of wages and employment, which suit the workers and the employer.
+
+tooltip.a1=The Coefficient of the salary change
+tooltip.a2=The Coefficient of the employed change
+tooltip.P0=The value of salary at the beginning of the study
+tooltip.N0=The value of the number of workers at the beginning of the study
+tooltip.Pr=The value of salary at the beginning of the study (balance)
+tooltip.Nr=The value of the number of workers at the beginning of the study (balance)
+tooltip.T=Observation time
+tooltip.N=Number of partitions by time
