--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -12,4 +12,14 @@ linechart.pdata=Размер зарплаты
 linechart.ndata=Количество занятых
 
 events.header=События
-events.text=Модель аналогична модели колебаний. Выведенная из равновесного состояния система стремится к равновесию со скоростями а1 и а2. Равновесное состояние - значение зарплаты и занятости, которые устраивают рабочих и работодателя
+events.text=Модель аналогична модели колебаний. Выведенная из равновесного состояния система стремится к равновесию со \
+скоростями а1 и а2. Равновесное состояние - значение зарплаты и занятости, которые устраивают рабочих и работодателя.
+
+tooltip.a1=Коэффициент изменения зарплаты
+tooltip.a2=Коэффициент изменения занятых
+tooltip.P0=Значение зарплаты в начале исследования
+tooltip.N0=Значение числа занятых мест в начале исследования
+tooltip.Pr=Значение зарплаты в начале исследования (равновесие)
+tooltip.Nr=Значение числа занятых мест в начале исследования (равновесие)
+tooltip.T=Время наблюдения
+tooltip.N=Количество разбиений по времени
