Локализирует хедер вкладки теория

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -23,3 +23,5 @@ tooltip.Pr=The value of salary at the beginning of the study (balance)
 tooltip.Nr=The value of the number of workers at the beginning of the study (balance)
 tooltip.T=Observation time
 tooltip.N=Number of partitions by time
+
+theory.header=The simplest model of changes in wages and employment
