Локализирует названия вкладок

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,5 +1,9 @@
 window.title=JavaFx Application
 
+tab.model=Mathematical model
+tab.theory=Theoretical material
+tab.about=About application
+
 parameters.header=Model's parameters
 button.example1=Balance
 button.example2=Too high salary
