--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -1,5 +1,9 @@
 window.title=JavaFx Приложение
 
+tab.model=Математическая модель
+tab.theory=Теоретический материал
+tab.about=О программе
+
 parameters.header=Параметры модели
 button.example1=Равновесие
 button.example2=Зарплата слишком высокая
