Добавляет события на изменения параметров модели и их локализацию

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -16,8 +16,30 @@ linechart.pdata=The size of the salary
 linechart.ndata=Number of employees
 
 events.header=Events
-events.text=The model is similar to the model of oscillations. The system derived from the balance state tends to balance \
-with velocities a1 and a2. Balance state - the value of wages and employment, which suit the workers and the employer.
+events.text=The model is similar to the model of oscillations. The system derived from the balance state tends to \
+balance with velocities a1 and a2. Balance state - the value of wages and employment, which suit the workers and the employer.
+events.example1=An example of "Balance" is selected. The system is initially in equilibrium and the system is unchanged.
+events.example2=An example of "Too big salary" is selected. This is the case when the salary is higher than the balance \
+value and The employer will reduce it until it reaches the balance state of the salary. Since the salary was higher \
+than the value of balance, the number of employed will increase as long as the salary decreases. As soon as the salary \
+falls below the value the number of people will decrease until they reach the balance of employment. After this, the \
+system will repeat its fluctuations.
+events.dec.a1=The coefficient of wage change has been reduced. \nThis leads to an increase in the time needed to achieve equilibrium.
+events.inc.a1=The coefficient of wage change has been increased. \nThis leads to a reduction in the time needed to achieve equilibrium.
+events.dec.a2=The coefficient of change in the number of employed people has been reduced. \nThe system will move to the equilibrium state more slowly.
+events.inc.a2=The coefficient of change in the number of employed people has been increased. \nThe system will move to the equilibrium state faster.
+events.dec.P0=Уменьшено значение зарплаты в начале исследования.
+events.inc.P0=Increased salary at the beginning of the study.
+events.dec.N0=Reduced the importance of busy people at the beginning of the study.
+events.inc.N0=Increased the value of employed people at the beginning of the study.
+events.dec.Pr=Reduced the value of wages in an equilibrium state.
+events.inc.Pr=The value of wages in the equilibrium state is increased.
+events.dec.Nr=The value of employed people is reduced in the balance state.
+events.inc.Nr=The value of employed people in the balance state is increased.
+events.dec.T=Decreased the time of observation.
+events.inc.T=Increased the time of observation.
+events.dec.N=The number of grid nodes has been reduced. This will lead to a faster decision time.
+events.inc.N=Increased number of grid nodes. This will lead to a longer decision time.
 
 tooltip.a1=The Coefficient of the salary change
 tooltip.a2=The Coefficient of the employed change
