--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -18,6 +18,28 @@ linechart.ndata=Количество занятых
 events.header=События
 events.text=Модель аналогична модели колебаний. Выведенная из равновесного состояния система стремится к равновесию со \
 скоростями а1 и а2. Равновесное состояние - значение зарплаты и занятости, которые устраивают рабочих и работодателя.
+events.example1=Выбран пример "Равновесия". Система изначально находится в равновесии и система неизменна.
+events.example2=Выбран пример "Cлишком большой зарплаты". Это случай, когда зарплата выше значения равновесия и \
+  работодатель будет уменьшать ее, пока не дойдет до состояния равновесия у зарплаты. Так как зарплата была выше значения \
+  равновесия, число занятых будет увеличиваться, пока зарплата уменьшается. Как только зарплата опустится ниже значения \
+  равновесия число людей будет уменьшаться, пока не достигнет значения равновесия занятости.\
+  После этого система повторит свои колебания.
+events.dec.a1=Уменьшен коэфициент изменения зарплаты. \nЭто ведет к увеличению времени, необходимого для достижения равновесия.
+events.inc.a1=Увеличен коэфициент изменения зарплаты. \nЭто ведет к уменьшению времени, необходимого для достижения равновесия.
+events.dec.a2=Уменьшен коэфициент изменения числа занятых людей. \nСистема будет двигаться к равновесному состоянию медленнее.
+events.inc.a2=Увеличен коэфициент изменения числа занятых людей. \nСистема будет двигаться к равновесному состоянию быстрее.
+events.dec.P0=Уменьшено значение зарплаты в начале исследования.
+events.inc.P0=Увеличено значение зарплаты в начале исследования.
+events.dec.N0=Уменьшено значение занятых людей начале исследования.
+events.inc.N0=Увеличено значение занятых людей в начале исследования.
+events.dec.Pr=Уменьшено значение зарплаты в равновесном состоянии.
+events.inc.Pr=Увеличено значение зарплаты в равновесном состоянии.
+events.dec.Nr=Уменьшено значение занятых людей в равновесном состоянии.
+events.inc.Nr=Увеличено значение занятых людей в равновесном состоянии.
+events.dec.T=Уменьшено время наблюдения.
+events.inc.T=Увеличено время наблюдения.
+events.dec.N=Уменьшено количество узлов сетки. Это приведет к более быстрому времени решения.
+events.inc.N=Увеличено количество узлов сетки. Это приведет к более длительному времени решения.
 
 tooltip.a1=Коэффициент изменения зарплаты
 tooltip.a2=Коэффициент изменения занятых
