Добавляет локализацию и описание вкладки модели

--- a/locale_en.properties
+++ b/locale_en.properties
@@ -51,3 +51,8 @@ tooltip.T=Observation time
 tooltip.N=Number of partitions by time
 
 theory.header=The simplest model of changes in wages and employment
+
+about.header.theory=Tab "Mathematical model"
+about.header.model=Tab "Theoretical material"
+about.textarea.theory=The content allows you to get acquainted with the theoretical basics used in implementing this model.
+about.textarea.model=The content allows you
