--- a/locale_ru.properties
+++ b/locale_ru.properties
@@ -51,3 +51,9 @@ tooltip.T=Время наблюдения
 tooltip.N=Количество разбиений по времени
 
 theory.header=Простейшая модель изменения зарплаты и занятости
+
+about.header.theory=Вкладка "Математическая модель"
+about.header.model=Вкладка "Теоретический материал"
+about.textarea.theory=Содержимое позволяет ознакомиться с теоретическими основами, использованными при реализации \
+  данной модели.
+about.textarea.model=Содержимое позволяет
