--- a/locale_en.properties
+++ b/locale_en.properties
@@ -57,13 +57,13 @@ about.header.model=Tab "Theoretical material"
 about.textarea.theory=The content allows you to get acquainted with the theoretical basics used in implementing this model.
 about.textarea.model=The content consists of three parts: the graphics panel, the parameters panel and the event pane. \
   \nPanel parameters consists of parameters and buttons. The graph is drawn automatically when one of the \
-  parameters has been changed. For each parameter there is a hint. It appears when you hold the mouse cursor over the title \
-  parameter or its value. \
+  parameters has been changed. For each parameter there is a hint. It appears when you hold the mouse cursor over the title \
+  parameter or its value. \
   \n\na1 - coefficient of salary change \n\na2 - coefficient of change of employed \
-  \n\nP0 - salary at the beginning of the research \n \nN0 - the number of occupied places at the beginning of the study \
-  \n\nPr - salary value at the beginning of the study (balance) \n\nNr - the number of occupied places at the beginning of the study (balance) \n \
-  \n\nT - time of observation \n\nN - number of partitions in time \n\n \
-  To change the parameters, you can enter a value from the keyboard and press ENTER or using the slider using the mouse \
+  \n\nP0 - salary at the beginning of the research \n\nN0 - the number of occupied places at the beginning of the study \
+  \n\nPr - salary value at the beginning of the study (balance) \n\nNr - the number of occupied places at the beginning of the study (balance)\
+  \n\nT - time of observation \n\nN - number of partitions in time\n\n\
+  To change the parameters, you can enter a value from the keyboard and press ENTER or using the slider using the mouse \
   or the "left" and "right" arrows. \
   \n\nThe "Balance" button adjusts the parameters to achieve the balance state. \
   \n\nThe "Salary too high" button adjusts the parameters to reach a state where the salary is above the balance value and \
