--- a/locale_en.properties
+++ b/locale_en.properties
@@ -54,7 +54,8 @@ theory.header=The simplest model of changes in wages and employment
 
 about.header.theory=Tab "Mathematical model"
 about.header.model=Tab "Theoretical material"
-about.textarea.theory=The content allows you to get acquainted with the theoretical basics used in implementing this model.
+about.textarea.theory=The content allows you to get acquainted with the theoretical basics used in implementing this \
+   model. It contains all the formulas necessary for understanding.
 about.textarea.model=The content consists of three parts: the graphics panel, the parameters panel and the event pane. \
   \nPanel parameters consists of parameters and buttons. The graph is drawn automatically when one of the \
   parameters has been changed. For each parameter there is a hint. It appears when you hold the mouse cursor over the title \
