--- a/locale_en.properties
+++ b/locale_en.properties
@@ -1,46 +1,47 @@
+# Главное окно
 window.title=JavaFx Application
-
 tab.model=Mathematical model
 tab.theory=Theoretical material
 tab.about=About application
-
+# Вкладка "Математическая модель"
+# Панель параметров
 parameters.header=Model's parameters
 button.example1=Balance
 button.example2=Too high salary
 button.change.lang=Сменить язык
-
+# Панель графика
 linechart.title=The model of the dependence of wages and employment
 linechart.xaxis=Time, t
 linechart.yaxis=Employment, N   and   wages, P
 linechart.pdata=The size of the salary
 linechart.ndata=Number of employees
-
+# Панель событий
 events.header=Events
 events.text=The model is similar to the model of oscillations. The system derived from the balance state tends to \
 balance with velocities a1 and a2. Balance state - the value of wages and employment, which suit the workers and the employer.
-events.example1=An example of "Balance" is selected. The system is initially in equilibrium and the system is unchanged.
+events.example1=An example of "Balance" is selected. The system is initially in balance and the system is unchanged.
 events.example2=An example of "Too big salary" is selected. This is the case when the salary is higher than the balance \
 value and The employer will reduce it until it reaches the balance state of the salary. Since the salary was higher \
 than the value of balance, the number of employed will increase as long as the salary decreases. As soon as the salary \
 falls below the value the number of people will decrease until they reach the balance of employment. After this, the \
 system will repeat its fluctuations.
-events.dec.a1=The coefficient of wage change has been reduced. \nThis leads to an increase in the time needed to achieve equilibrium.
-events.inc.a1=The coefficient of wage change has been increased. \nThis leads to a reduction in the time needed to achieve equilibrium.
-events.dec.a2=The coefficient of change in the number of employed people has been reduced. \nThe system will move to the equilibrium state more slowly.
-events.inc.a2=The coefficient of change in the number of employed people has been increased. \nThe system will move to the equilibrium state faster.
+events.dec.a1=The coefficient of wage change has been reduced. \nThis leads to an increase in the time needed to achieve balance.
+events.inc.a1=The coefficient of wage change has been increased. \nThis leads to a reduction in the time needed to achieve balance.
+events.dec.a2=The coefficient of change in the number of employed people has been reduced. \nThe system will move to the balance state more slowly.
+events.inc.a2=The coefficient of change in the number of employed people has been increased. \nThe system will move to the balance state faster.
 events.dec.P0=Уменьшено значение зарплаты в начале исследования.
 events.inc.P0=Increased salary at the beginning of the study.
 events.dec.N0=Reduced the importance of busy people at the beginning of the study.
 events.inc.N0=Increased the value of employed people at the beginning of the study.
-events.dec.Pr=Reduced the value of wages in an equilibrium state.
-events.inc.Pr=The value of wages in the equilibrium state is increased.
+events.dec.Pr=Reduced the value of wages in an balance state.
+events.inc.Pr=The value of wages in the balance state is increased.
 events.dec.Nr=The value of employed people is reduced in the balance state.
 events.inc.Nr=The value of employed people in the balance state is increased.
 events.dec.T=Decreased the time of observation.
 events.inc.T=Increased the time of observation.
 events.dec.N=The number of grid nodes has been reduced. This will lead to a faster decision time.
 events.inc.N=Increased number of grid nodes. This will lead to a longer decision time.
-
+# Подсказки
 tooltip.a1=The Coefficient of the salary change
 tooltip.a2=The Coefficient of the employed change
 tooltip.P0=The value of salary at the beginning of the study
@@ -49,9 +50,9 @@ tooltip.Pr=The value of salary at the beginning of the study (balance)
 tooltip.Nr=The value of the number of workers at the beginning of the study (balance)
 tooltip.T=Observation time
 tooltip.N=Number of partitions by time
-
+# Вкладка "Теоретический материал"
 theory.header=The simplest model of changes in wages and employment
-
+# Вкладка "О программе"
 about.header.theory=Tab "Mathematical model"
 about.header.model=Tab "Theoretical material"
 about.textarea.theory=The content allows you to get acquainted with the theoretical basics used in implementing this \
