Добавляет новый пример

--- a/locale_en.properties
+++ b/locale_en.properties
@@ -8,6 +8,7 @@ tab.about=About application
 parameters.header=Model's parameters
 button.example1=Balance
 button.example2=Too high salary
+button.example3=Programmer`s salaries
 button.change.lang=Сменить язык
 # Панель графика
 linechart.title=The model of the dependence of wages and employment
@@ -25,6 +26,7 @@ value and The employer will reduce it until it reaches the balance state of the 
 than the value of balance, the number of employed will increase as long as the salary decreases. As soon as the salary \
 falls below the value the number of people will decrease until they reach the balance of employment. After this, the \
 system will repeat its fluctuations.
+events.example3=An example of "Programmer's salaries" is selected.
 events.dec.a1=The coefficient of wage change has been reduced. \nThis leads to an increase in the time needed to achieve balance.
 events.inc.a1=The coefficient of wage change has been increased. \nThis leads to a reduction in the time needed to achieve balance.
 events.dec.a2=The coefficient of change in the number of employed people has been reduced. \nThe system will move to the balance state more slowly.
